--- a/BlazorApp1/Server/appsettings.json
+++ b/BlazorApp1/Server/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSecurityKey": "RASTGELE_BIR_ANAHTAR_SOZCUK",
+  "JwtIssuer": "https://mycompany.com",
+  "JwtAudience": "https://mycompany.com",
+  "JwtExpiryInDays" :  1
 }
